# terminal_layout

./: .gitignore  README.ZH.md  README.md  README.rst  choice.py  input_test.py  log.txt  pyproject.toml  requirements.txt  setup.py  test.py  test2.py  test3.py  tox.ini  tt.py
demo/: choice.py  demo1.py  demo2(quick_init).py  demo3(colorful).py  demo4(ctl_quick).py  demo5(re_draw).py  demo6(get_width).py  demo7(python2_unicode).py  demo_v2_1.py  input_ex.py  key_listener.py  progress.py  record_demo.py  scroll.py
demo/textview_params_demo/: color.py  ex_color.py  ex_style.py  gravity.py  width.py
demo/textview_properties_demo/: color.py  ex_color.py  ex_style.py  gravity.py  style.py  visibility.py  weight.py  width.py
docs/: FAQ.rst  Properties.rst  View.rst  changelog.rst  conf.py  draw.rst  getStarted.rst  index.rst  installation.rst  keyListener.rst  requirements.txt
docs/extensions/: index.rst
docs/source/: FAQ.rst  LayoutCtl.rst  View.rst  changelog.rst  conf.py  draw.rst  getStarted.rst  index.rst  installation.rst  introduction.rst  keyListener.rst
terminal_layout/: __init__.py  ctl.py  helper.py  input.py  layout.py  log.py  logger.py  types.py  view.py
terminal_layout/ansi/: __init__.py  back.py  font.py  fore.py  style.py
terminal_layout/extensions/: __init__.py
terminal_layout/helper/: class_helper.py  helper.py
terminal_layout/readkey/: __init__.py  event.py  key.py  linux.py  listener.py  windows.py
terminal_layout/view/: __init__.py  base.py  layout.py  params.py  text_view.py  util.py
tests/: test_1.py
(+22 files in other folders)
